Fixed tool icon alignment

--- a/public/style.css
+++ b/public/style.css
@@ -161,7 +161,9 @@ button:hover {
 
 #toolSelect table tr td button img {
   width: 50px;
-  height: auto;
+  height: 50px;
+  margin-top: -2px;
+  margin-left: -8px;
 }
 
 .collabBtn img{
